src/Miranda/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from Parser.y
-----------------------------------------------------------------------------

state 35 contains 15 shift/reduce conflicts.
state 42 contains 1 shift/reduce conflicts.
state 62 contains 15 shift/reduce conflicts.
state 75 contains 1 shift/reduce conflicts.
state 76 contains 3 shift/reduce conflicts.
state 87 contains 1 shift/reduce conflicts.
state 89 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parser -> program                           (0)
	%start_declParser -> decl                          (1)
	%start_expParser -> exp                            (2)
	program -> '{' stmts '}'                           (3)
	stmts -> stmts ';' stmt                            (4)
	stmts -> stmt                                      (5)
	stmt -> exp '::=' constructors                     (6)
	stmt -> var '::' typeExpr                          (7)
	stmt -> assignDef                                  (8)
	stmt -> exp                                        (9)
	assignDef -> exp '=' frhs maybeWhere               (10)
	assignDefs -> assignDefs ';' assignDef             (11)
	assignDefs -> assignDef                            (12)
	frhs -> frhs '=' clause                            (13)
	frhs -> clause                                     (14)
	clause -> exp                                      (15)
	clause -> exp ',' exp                              (16)
	maybeWhere -> 'where' whereDefs                    (17)
	maybeWhere ->                                      (18)
	whereDefs -> '{' assignDefs '}'                    (19)
	typeExpr -> var                                    (20)
	typeExpr -> constr typeExprs                       (21)
	typeExpr -> typeExpr '->' typeExpr                 (22)
	typeExpr -> '(' typeExpr ')'                       (23)
	typeExprs -> typeExprs typeExpr                    (24)
	typeExprs -> typeExpr                              (25)
	decl -> exp '::=' constructors                     (26)
	decl -> assignDef                                  (27)
	constructors -> constructors '|' exp               (28)
	constructors -> exp                                (29)
	exp -> apply                                       (30)
	exp -> infixApp                                    (31)
	exp -> term                                        (32)
	infixApp -> exp infixOp exp                        (33)
	apply -> exp term                                  (34)
	infixOp -> plus                                    (35)
	infixOp -> minus                                   (36)
	infixOp -> mult                                    (37)
	infixOp -> div                                     (38)
	infixOp -> equal                                   (39)
	infixOp -> lt                                      (40)
	infixOp -> gt                                      (41)
	infixOp -> ':'                                     (42)
	infixOp -> infix_var                               (43)
	term -> variable                                   (44)
	term -> specialLit                                 (45)
	term -> genTypeVar                                 (46)
	term -> constr                                     (47)
	term -> constant                                   (48)
	term -> '(' exp ')'                                (49)
	term -> infixOp                                    (50)
	variable -> var                                    (51)
	constant -> const                                  (52)
	genTypeVar -> gtype_2plus                          (53)
	specialLit -> listLit                              (54)
	specialLit -> tupleLit                             (55)
	listLit -> '[' ']'                                 (56)
	listLit -> '[' commaSepExp ']'                     (57)
	tupleLit -> '(' commaSepExp ')'                    (58)
	commaSepExp -> commaSepExp ',' exp                 (59)
	commaSepExp -> exp                                 (60)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'='            { T.Equal }
	'::='          { T.TypeEq }
	'::'           { T.DblColon }
	'->'           { T.Arrow }
	'('            { T.LP }
	')'            { T.RP }
	'['            { T.LB }
	']'            { T.RB }
	';'            { T.Semi }
	','            { T.Comma }
	'{'            { T.LC }
	'}'            { T.RC }
	'|'            { T.VertBar }
	'where'        { T.Where }
	plus           { T.InfixOp T.IPlus }
	minus          { T.InfixOp T.IMinus }
	mult           { T.InfixOp T.IMult }
	div            { T.InfixOp T.IDiv }
	equal          { T.InfixOp T.IEq }
	lt             { T.InfixOp T.ILt }
	gt             { T.InfixOp T.IGt }
	':'            { T.InfixOp T.ICons }
	infix_var      { T.InfixOp (T.IVar _) }
	const          { T.Constant $$ }
	constr         { T.Constructor $$ }
	var            { T.Variable $$ }
	gtype_2plus    { T.GenTypeVar $$ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parser   rule  0
	%start_declParser rule  1
	%start_expParser rule  2
	program         rule  3
	stmts           rules 4, 5
	stmt            rules 6, 7, 8, 9
	assignDef       rule  10
	assignDefs      rules 11, 12
	frhs            rules 13, 14
	clause          rules 15, 16
	maybeWhere      rules 17, 18
	whereDefs       rule  19
	typeExpr        rules 20, 21, 22, 23
	typeExprs       rules 24, 25
	decl            rules 26, 27
	constructors    rules 28, 29
	exp             rules 30, 31, 32
	infixApp        rule  33
	apply           rule  34
	infixOp         rules 35, 36, 37, 38, 39, 40, 41, 42, 43
	term            rules 44, 45, 46, 47, 48, 49, 50
	variable        rule  51
	constant        rule  52
	genTypeVar      rule  53
	specialLit      rules 54, 55
	listLit         rules 56, 57
	tupleLit        rule  58
	commaSepExp     rules 59, 60

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'{'            shift, and enter state 4

	program        goto state 34

State 1


	'('            shift, and enter state 16
	'['            shift, and enter state 17
	plus           shift, and enter state 18
	minus          shift, and enter state 19
	mult           shift, and enter state 20
	div            shift, and enter state 21
	equal          shift, and enter state 22
	lt             shift, and enter state 23
	gt             shift, and enter state 24
	':'            shift, and enter state 25
	infix_var      shift, and enter state 26
	const          shift, and enter state 27
	constr         shift, and enter state 28
	var            shift, and enter state 29
	gtype_2plus    shift, and enter state 30

	assignDef      goto state 31
	decl           goto state 32
	exp            goto state 33
	infixApp       goto state 6
	apply          goto state 7
	infixOp        goto state 8
	term           goto state 9
	variable       goto state 10
	constant       goto state 11
	genTypeVar     goto state 12
	specialLit     goto state 13
	listLit        goto state 14
	tupleLit       goto state 15

State 2


	'('            shift, and enter state 16
	'['            shift, and enter state 17
	plus           shift, and enter state 18
	minus          shift, and enter state 19
	mult           shift, and enter state 20
	div            shift, and enter state 21
	equal          shift, and enter state 22
	lt             shift, and enter state 23
	gt             shift, and enter state 24
	':'            shift, and enter state 25
	infix_var      shift, and enter state 26
	const          shift, and enter state 27
	constr         shift, and enter state 28
	var            shift, and enter state 29
	gtype_2plus    shift, and enter state 30

	exp            goto state 5
	infixApp       goto state 6
	apply          goto state 7
	infixOp        goto state 8
	term           goto state 9
	variable       goto state 10
	constant       goto state 11
	genTypeVar     goto state 12
	specialLit     goto state 13
	listLit        goto state 14
	tupleLit       goto state 15

State 3


	'{'            shift, and enter state 4


State 4

	program -> '{' . stmts '}'                          (rule 3)

	'('            shift, and enter state 16
	'['            shift, and enter state 17
	plus           shift, and enter state 18
	minus          shift, and enter state 19
	mult           shift, and enter state 20
	div            shift, and enter state 21
	equal          shift, and enter state 22
	lt             shift, and enter state 23
	gt             shift, and enter state 24
	':'            shift, and enter state 25
	infix_var      shift, and enter state 26
	const          shift, and enter state 27
	constr         shift, and enter state 28
	var            shift, and enter state 48
	gtype_2plus    shift, and enter state 30

	stmts          goto state 44
	stmt           goto state 45
	assignDef      goto state 46
	exp            goto state 47
	infixApp       goto state 6
	apply          goto state 7
	infixOp        goto state 8
	term           goto state 9
	variable       goto state 10
	constant       goto state 11
	genTypeVar     goto state 12
	specialLit     goto state 13
	listLit        goto state 14
	tupleLit       goto state 15

State 5

	%start_expParser -> exp .                           (rule 2)
	infixApp -> exp . infixOp exp                       (rule 33)
	apply -> exp . term                                 (rule 34)

	'('            shift, and enter state 16
	'['            shift, and enter state 17
	plus           shift, and enter state 18
	minus          shift, and enter state 19
	mult           shift, and enter state 20
	div            shift, and enter state 21
	equal          shift, and enter state 22
	lt             shift, and enter state 23
	gt             shift, and enter state 24
	':'            shift, and enter state 25
	infix_var      shift, and enter state 26
	const          shift, and enter state 27
	constr         shift, and enter state 28
	var            shift, and enter state 29
	gtype_2plus    shift, and enter state 30
	%eof           accept

	infixOp        goto state 35
	term           goto state 36
	variable       goto state 10
	constant       goto state 11
	genTypeVar     goto state 12
	specialLit     goto state 13
	listLit        goto state 14
	tupleLit       goto state 15

State 6

	exp -> infixApp .                                   (rule 31)

	'='            reduce using rule 31
	'::='          reduce using rule 31
	'('            reduce using rule 31
	')'            reduce using rule 31
	'['            reduce using rule 31
	']'            reduce using rule 31
	';'            reduce using rule 31
	','            reduce using rule 31
	'}'            reduce using rule 31
	'|'            reduce using rule 31
	'where'        reduce using rule 31
	plus           reduce using rule 31
	minus          reduce using rule 31
	mult           reduce using rule 31
	div            reduce using rule 31
	equal          reduce using rule 31
	lt             reduce using rule 31
	gt             reduce using rule 31
	':'            reduce using rule 31
	infix_var      reduce using rule 31
	const          reduce using rule 31
	constr         reduce using rule 31
	var            reduce using rule 31
	gtype_2plus    reduce using rule 31
	%eof           reduce using rule 31


State 7

	exp -> apply .                                      (rule 30)

	'='            reduce using rule 30
	'::='          reduce using rule 30
	'('            reduce using rule 30
	')'            reduce using rule 30
	'['            reduce using rule 30
	']'            reduce using rule 30
	';'            reduce using rule 30
	','            reduce using rule 30
	'}'            reduce using rule 30
	'|'            reduce using rule 30
	'where'        reduce using rule 30
	plus           reduce using rule 30
	minus          reduce using rule 30
	mult           reduce using rule 30
	div            reduce using rule 30
	equal          reduce using rule 30
	lt             reduce using rule 30
	gt             reduce using rule 30
	':'            reduce using rule 30
	infix_var      reduce using rule 30
	const          reduce using rule 30
	constr         reduce using rule 30
	var            reduce using rule 30
	gtype_2plus    reduce using rule 30
	%eof           reduce using rule 30


State 8

	term -> infixOp .                                   (rule 50)

	'='            reduce using rule 50
	'::='          reduce using rule 50
	'('            reduce using rule 50
	')'            reduce using rule 50
	'['            reduce using rule 50
	']'            reduce using rule 50
	';'            reduce using rule 50
	','            reduce using rule 50
	'}'            reduce using rule 50
	'|'            reduce using rule 50
	'where'        reduce using rule 50
	plus           reduce using rule 50
	minus          reduce using rule 50
	mult           reduce using rule 50
	div            reduce using rule 50
	equal          reduce using rule 50
	lt             reduce using rule 50
	gt             reduce using rule 50
	':'            reduce using rule 50
	infix_var      reduce using rule 50
	const          reduce using rule 50
	constr         reduce using rule 50
	var            reduce using rule 50
	gtype_2plus    reduce using rule 50
	%eof           reduce using rule 50


State 9

	exp -> term .                                       (rule 32)

	'='            reduce using rule 32
	'::='          reduce using rule 32
	'('            reduce using rule 32
	')'            reduce using rule 32
	'['            reduce using rule 32
	']'            reduce using rule 32
	';'            reduce using rule 32
	','            reduce using rule 32
	'}'            reduce using rule 32
	'|'            reduce using rule 32
	'where'        reduce using rule 32
	plus           reduce using rule 32
	minus          reduce using rule 32
	mult           reduce using rule 32
	div            reduce using rule 32
	equal          reduce using rule 32
	lt             reduce using rule 32
	gt             reduce using rule 32
	':'            reduce using rule 32
	infix_var      reduce using rule 32
	const          reduce using rule 32
	constr         reduce using rule 32
	var            reduce using rule 32
	gtype_2plus    reduce using rule 32
	%eof           reduce using rule 32


State 10

	term -> variable .                                  (rule 44)

	'='            reduce using rule 44
	'::='          reduce using rule 44
	'('            reduce using rule 44
	')'            reduce using rule 44
	'['            reduce using rule 44
	']'            reduce using rule 44
	';'            reduce using rule 44
	','            reduce using rule 44
	'}'            reduce using rule 44
	'|'            reduce using rule 44
	'where'        reduce using rule 44
	plus           reduce using rule 44
	minus          reduce using rule 44
	mult           reduce using rule 44
	div            reduce using rule 44
	equal          reduce using rule 44
	lt             reduce using rule 44
	gt             reduce using rule 44
	':'            reduce using rule 44
	infix_var      reduce using rule 44
	const          reduce using rule 44
	constr         reduce using rule 44
	var            reduce using rule 44
	gtype_2plus    reduce using rule 44
	%eof           reduce using rule 44


State 11

	term -> constant .                                  (rule 48)

	'='            reduce using rule 48
	'::='          reduce using rule 48
	'('            reduce using rule 48
	')'            reduce using rule 48
	'['            reduce using rule 48
	']'            reduce using rule 48
	';'            reduce using rule 48
	','            reduce using rule 48
	'}'            reduce using rule 48
	'|'            reduce using rule 48
	'where'        reduce using rule 48
	plus           reduce using rule 48
	minus          reduce using rule 48
	mult           reduce using rule 48
	div            reduce using rule 48
	equal          reduce using rule 48
	lt             reduce using rule 48
	gt             reduce using rule 48
	':'            reduce using rule 48
	infix_var      reduce using rule 48
	const          reduce using rule 48
	constr         reduce using rule 48
	var            reduce using rule 48
	gtype_2plus    reduce using rule 48
	%eof           reduce using rule 48


State 12

	term -> genTypeVar .                                (rule 46)

	'='            reduce using rule 46
	'::='          reduce using rule 46
	'('            reduce using rule 46
	')'            reduce using rule 46
	'['            reduce using rule 46
	']'            reduce using rule 46
	';'            reduce using rule 46
	','            reduce using rule 46
	'}'            reduce using rule 46
	'|'            reduce using rule 46
	'where'        reduce using rule 46
	plus           reduce using rule 46
	minus          reduce using rule 46
	mult           reduce using rule 46
	div            reduce using rule 46
	equal          reduce using rule 46
	lt             reduce using rule 46
	gt             reduce using rule 46
	':'            reduce using rule 46
	infix_var      reduce using rule 46
	const          reduce using rule 46
	constr         reduce using rule 46
	var            reduce using rule 46
	gtype_2plus    reduce using rule 46
	%eof           reduce using rule 46


State 13

	term -> specialLit .                                (rule 45)

	'='            reduce using rule 45
	'::='          reduce using rule 45
	'('            reduce using rule 45
	')'            reduce using rule 45
	'['            reduce using rule 45
	']'            reduce using rule 45
	';'            reduce using rule 45
	','            reduce using rule 45
	'}'            reduce using rule 45
	'|'            reduce using rule 45
	'where'        reduce using rule 45
	plus           reduce using rule 45
	minus          reduce using rule 45
	mult           reduce using rule 45
	div            reduce using rule 45
	equal          reduce using rule 45
	lt             reduce using rule 45
	gt             reduce using rule 45
	':'            reduce using rule 45
	infix_var      reduce using rule 45
	const          reduce using rule 45
	constr         reduce using rule 45
	var            reduce using rule 45
	gtype_2plus    reduce using rule 45
	%eof           reduce using rule 45


State 14

	specialLit -> listLit .                             (rule 54)

	'='            reduce using rule 54
	'::='          reduce using rule 54
	'('            reduce using rule 54
	')'            reduce using rule 54
	'['            reduce using rule 54
	']'            reduce using rule 54
	';'            reduce using rule 54
	','            reduce using rule 54
	'}'            reduce using rule 54
	'|'            reduce using rule 54
	'where'        reduce using rule 54
	plus           reduce using rule 54
	minus          reduce using rule 54
	mult           reduce using rule 54
	div            reduce using rule 54
	equal          reduce using rule 54
	lt             reduce using rule 54
	gt             reduce using rule 54
	':'            reduce using rule 54
	infix_var      reduce using rule 54
	const          reduce using rule 54
	constr         reduce using rule 54
	var            reduce using rule 54
	gtype_2plus    reduce using rule 54
	%eof           reduce using rule 54


State 15

	specialLit -> tupleLit .                            (rule 55)

	'='            reduce using rule 55
	'::='          reduce using rule 55
	'('            reduce using rule 55
	')'            reduce using rule 55
	'['            reduce using rule 55
	']'            reduce using rule 55
	';'            reduce using rule 55
	','            reduce using rule 55
	'}'            reduce using rule 55
	'|'            reduce using rule 55
	'where'        reduce using rule 55
	plus           reduce using rule 55
	minus          reduce using rule 55
	mult           reduce using rule 55
	div            reduce using rule 55
	equal          reduce using rule 55
	lt             reduce using rule 55
	gt             reduce using rule 55
	':'            reduce using rule 55
	infix_var      reduce using rule 55
	const          reduce using rule 55
	constr         reduce using rule 55
	var            reduce using rule 55
	gtype_2plus    reduce using rule 55
	%eof           reduce using rule 55


State 16

	term -> '(' . exp ')'                               (rule 49)
	tupleLit -> '(' . commaSepExp ')'                   (rule 58)

	'('            shift, and enter state 16
	'['            shift, and enter state 17
	plus           shift, and enter state 18
	minus          shift, and enter state 19
	mult           shift, and enter state 20
	div            shift, and enter state 21
	equal          shift, and enter state 22
	lt             shift, and enter state 23
	gt             shift, and enter state 24
	':'            shift, and enter state 25
	infix_var      shift, and enter state 26
	const          shift, and enter state 27
	constr         shift, and enter state 28
	var            shift, and enter state 29
	gtype_2plus    shift, and enter state 30

	exp            goto state 42
	infixApp       goto state 6
	apply          goto state 7
	infixOp        goto state 8
	term           goto state 9
	variable       goto state 10
	constant       goto state 11
	genTypeVar     goto state 12
	specialLit     goto state 13
	listLit        goto state 14
	tupleLit       goto state 15
	commaSepExp    goto state 43

State 17

	listLit -> '[' . ']'                                (rule 56)
	listLit -> '[' . commaSepExp ']'                    (rule 57)

	'('            shift, and enter state 16
	'['            shift, and enter state 17
	']'            shift, and enter state 41
	plus           shift, and enter state 18
	minus          shift, and enter state 19
	mult           shift, and enter state 20
	div            shift, and enter state 21
	equal          shift, and enter state 22
	lt             shift, and enter state 23
	gt             shift, and enter state 24
	':'            shift, and enter state 25
	infix_var      shift, and enter state 26
	const          shift, and enter state 27
	constr         shift, and enter state 28
	var            shift, and enter state 29
	gtype_2plus    shift, and enter state 30

	exp            goto state 39
	infixApp       goto state 6
	apply          goto state 7
	infixOp        goto state 8
	term           goto state 9
	variable       goto state 10
	constant       goto state 11
	genTypeVar     goto state 12
	specialLit     goto state 13
	listLit        goto state 14
	tupleLit       goto state 15
	commaSepExp    goto state 40

State 18

	infixOp -> plus .                                   (rule 35)

	'='            reduce using rule 35
	'::='          reduce using rule 35
	'('            reduce using rule 35
	')'            reduce using rule 35
	'['            reduce using rule 35
	']'            reduce using rule 35
	';'            reduce using rule 35
	','            reduce using rule 35
	'}'            reduce using rule 35
	'|'            reduce using rule 35
	'where'        reduce using rule 35
	plus           reduce using rule 35
	minus          reduce using rule 35
	mult           reduce using rule 35
	div            reduce using rule 35
	equal          reduce using rule 35
	lt             reduce using rule 35
	gt             reduce using rule 35
	':'            reduce using rule 35
	infix_var      reduce using rule 35
	const          reduce using rule 35
	constr         reduce using rule 35
	var            reduce using rule 35
	gtype_2plus    reduce using rule 35
	%eof           reduce using rule 35


State 19

	infixOp -> minus .                                  (rule 36)

	'='            reduce using rule 36
	'::='          reduce using rule 36
	'('            reduce using rule 36
	')'            reduce using rule 36
	'['            reduce using rule 36
	']'            reduce using rule 36
	';'            reduce using rule 36
	','            reduce using rule 36
	'}'            reduce using rule 36
	'|'            reduce using rule 36
	'where'        reduce using rule 36
	plus           reduce using rule 36
	minus          reduce using rule 36
	mult           reduce using rule 36
	div            reduce using rule 36
	equal          reduce using rule 36
	lt             reduce using rule 36
	gt             reduce using rule 36
	':'            reduce using rule 36
	infix_var      reduce using rule 36
	const          reduce using rule 36
	constr         reduce using rule 36
	var            reduce using rule 36
	gtype_2plus    reduce using rule 36
	%eof           reduce using rule 36


State 20

	infixOp -> mult .                                   (rule 37)

	'='            reduce using rule 37
	'::='          reduce using rule 37
	'('            reduce using rule 37
	')'            reduce using rule 37
	'['            reduce using rule 37
	']'            reduce using rule 37
	';'            reduce using rule 37
	','            reduce using rule 37
	'}'            reduce using rule 37
	'|'            reduce using rule 37
	'where'        reduce using rule 37
	plus           reduce using rule 37
	minus          reduce using rule 37
	mult           reduce using rule 37
	div            reduce using rule 37
	equal          reduce using rule 37
	lt             reduce using rule 37
	gt             reduce using rule 37
	':'            reduce using rule 37
	infix_var      reduce using rule 37
	const          reduce using rule 37
	constr         reduce using rule 37
	var            reduce using rule 37
	gtype_2plus    reduce using rule 37
	%eof           reduce using rule 37


State 21

	infixOp -> div .                                    (rule 38)

	'='            reduce using rule 38
	'::='          reduce using rule 38
	'('            reduce using rule 38
	')'            reduce using rule 38
	'['            reduce using rule 38
	']'            reduce using rule 38
	';'            reduce using rule 38
	','            reduce using rule 38
	'}'            reduce using rule 38
	'|'            reduce using rule 38
	'where'        reduce using rule 38
	plus           reduce using rule 38
	minus          reduce using rule 38
	mult           reduce using rule 38
	div            reduce using rule 38
	equal          reduce using rule 38
	lt             reduce using rule 38
	gt             reduce using rule 38
	':'            reduce using rule 38
	infix_var      reduce using rule 38
	const          reduce using rule 38
	constr         reduce using rule 38
	var            reduce using rule 38
	gtype_2plus    reduce using rule 38
	%eof           reduce using rule 38


State 22

	infixOp -> equal .                                  (rule 39)

	'='            reduce using rule 39
	'::='          reduce using rule 39
	'('            reduce using rule 39
	')'            reduce using rule 39
	'['            reduce using rule 39
	']'            reduce using rule 39
	';'            reduce using rule 39
	','            reduce using rule 39
	'}'            reduce using rule 39
	'|'            reduce using rule 39
	'where'        reduce using rule 39
	plus           reduce using rule 39
	minus          reduce using rule 39
	mult           reduce using rule 39
	div            reduce using rule 39
	equal          reduce using rule 39
	lt             reduce using rule 39
	gt             reduce using rule 39
	':'            reduce using rule 39
	infix_var      reduce using rule 39
	const          reduce using rule 39
	constr         reduce using rule 39
	var            reduce using rule 39
	gtype_2plus    reduce using rule 39
	%eof           reduce using rule 39


State 23

	infixOp -> lt .                                     (rule 40)

	'='            reduce using rule 40
	'::='          reduce using rule 40
	'('            reduce using rule 40
	')'            reduce using rule 40
	'['            reduce using rule 40
	']'            reduce using rule 40
	';'            reduce using rule 40
	','            reduce using rule 40
	'}'            reduce using rule 40
	'|'            reduce using rule 40
	'where'        reduce using rule 40
	plus           reduce using rule 40
	minus          reduce using rule 40
	mult           reduce using rule 40
	div            reduce using rule 40
	equal          reduce using rule 40
	lt             reduce using rule 40
	gt             reduce using rule 40
	':'            reduce using rule 40
	infix_var      reduce using rule 40
	const          reduce using rule 40
	constr         reduce using rule 40
	var            reduce using rule 40
	gtype_2plus    reduce using rule 40
	%eof           reduce using rule 40


State 24

	infixOp -> gt .                                     (rule 41)

	'='            reduce using rule 41
	'::='          reduce using rule 41
	'('            reduce using rule 41
	')'            reduce using rule 41
	'['            reduce using rule 41
	']'            reduce using rule 41
	';'            reduce using rule 41
	','            reduce using rule 41
	'}'            reduce using rule 41
	'|'            reduce using rule 41
	'where'        reduce using rule 41
	plus           reduce using rule 41
	minus          reduce using rule 41
	mult           reduce using rule 41
	div            reduce using rule 41
	equal          reduce using rule 41
	lt             reduce using rule 41
	gt             reduce using rule 41
	':'            reduce using rule 41
	infix_var      reduce using rule 41
	const          reduce using rule 41
	constr         reduce using rule 41
	var            reduce using rule 41
	gtype_2plus    reduce using rule 41
	%eof           reduce using rule 41


State 25

	infixOp -> ':' .                                    (rule 42)

	'='            reduce using rule 42
	'::='          reduce using rule 42
	'('            reduce using rule 42
	')'            reduce using rule 42
	'['            reduce using rule 42
	']'            reduce using rule 42
	';'            reduce using rule 42
	','            reduce using rule 42
	'}'            reduce using rule 42
	'|'            reduce using rule 42
	'where'        reduce using rule 42
	plus           reduce using rule 42
	minus          reduce using rule 42
	mult           reduce using rule 42
	div            reduce using rule 42
	equal          reduce using rule 42
	lt             reduce using rule 42
	gt             reduce using rule 42
	':'            reduce using rule 42
	infix_var      reduce using rule 42
	const          reduce using rule 42
	constr         reduce using rule 42
	var            reduce using rule 42
	gtype_2plus    reduce using rule 42
	%eof           reduce using rule 42


State 26

	infixOp -> infix_var .                              (rule 43)

	'='            reduce using rule 43
	'::='          reduce using rule 43
	'('            reduce using rule 43
	')'            reduce using rule 43
	'['            reduce using rule 43
	']'            reduce using rule 43
	';'            reduce using rule 43
	','            reduce using rule 43
	'}'            reduce using rule 43
	'|'            reduce using rule 43
	'where'        reduce using rule 43
	plus           reduce using rule 43
	minus          reduce using rule 43
	mult           reduce using rule 43
	div            reduce using rule 43
	equal          reduce using rule 43
	lt             reduce using rule 43
	gt             reduce using rule 43
	':'            reduce using rule 43
	infix_var      reduce using rule 43
	const          reduce using rule 43
	constr         reduce using rule 43
	var            reduce using rule 43
	gtype_2plus    reduce using rule 43
	%eof           reduce using rule 43


State 27

	constant -> const .                                 (rule 52)

	'='            reduce using rule 52
	'::='          reduce using rule 52
	'('            reduce using rule 52
	')'            reduce using rule 52
	'['            reduce using rule 52
	']'            reduce using rule 52
	';'            reduce using rule 52
	','            reduce using rule 52
	'}'            reduce using rule 52
	'|'            reduce using rule 52
	'where'        reduce using rule 52
	plus           reduce using rule 52
	minus          reduce using rule 52
	mult           reduce using rule 52
	div            reduce using rule 52
	equal          reduce using rule 52
	lt             reduce using rule 52
	gt             reduce using rule 52
	':'            reduce using rule 52
	infix_var      reduce using rule 52
	const          reduce using rule 52
	constr         reduce using rule 52
	var            reduce using rule 52
	gtype_2plus    reduce using rule 52
	%eof           reduce using rule 52


State 28

	term -> constr .                                    (rule 47)

	'='            reduce using rule 47
	'::='          reduce using rule 47
	'('            reduce using rule 47
	')'            reduce using rule 47
	'['            reduce using rule 47
	']'            reduce using rule 47
	';'            reduce using rule 47
	','            reduce using rule 47
	'}'            reduce using rule 47
	'|'            reduce using rule 47
	'where'        reduce using rule 47
	plus           reduce using rule 47
	minus          reduce using rule 47
	mult           reduce using rule 47
	div            reduce using rule 47
	equal          reduce using rule 47
	lt             reduce using rule 47
	gt             reduce using rule 47
	':'            reduce using rule 47
	infix_var      reduce using rule 47
	const          reduce using rule 47
	constr         reduce using rule 47
	var            reduce using rule 47
	gtype_2plus    reduce using rule 47
	%eof           reduce using rule 47


State 29

	variable -> var .                                   (rule 51)

	'='            reduce using rule 51
	'::='          reduce using rule 51
	'('            reduce using rule 51
	')'            reduce using rule 51
	'['            reduce using rule 51
	']'            reduce using rule 51
	';'            reduce using rule 51
	','            reduce using rule 51
	'}'            reduce using rule 51
	'|'            reduce using rule 51
	'where'        reduce using rule 51
	plus           reduce using rule 51
	minus          reduce using rule 51
	mult           reduce using rule 51
	div            reduce using rule 51
	equal          reduce using rule 51
	lt             reduce using rule 51
	gt             reduce using rule 51
	':'            reduce using rule 51
	infix_var      reduce using rule 51
	const          reduce using rule 51
	constr         reduce using rule 51
	var            reduce using rule 51
	gtype_2plus    reduce using rule 51
	%eof           reduce using rule 51


State 30

	genTypeVar -> gtype_2plus .                         (rule 53)

	'='            reduce using rule 53
	'::='          reduce using rule 53
	'('            reduce using rule 53
	')'            reduce using rule 53
	'['            reduce using rule 53
	']'            reduce using rule 53
	';'            reduce using rule 53
	','            reduce using rule 53
	'}'            reduce using rule 53
	'|'            reduce using rule 53
	'where'        reduce using rule 53
	plus           reduce using rule 53
	minus          reduce using rule 53
	mult           reduce using rule 53
	div            reduce using rule 53
	equal          reduce using rule 53
	lt             reduce using rule 53
	gt             reduce using rule 53
	':'            reduce using rule 53
	infix_var      reduce using rule 53
	const          reduce using rule 53
	constr         reduce using rule 53
	var            reduce using rule 53
	gtype_2plus    reduce using rule 53
	%eof           reduce using rule 53


State 31

	decl -> assignDef .                                 (rule 27)

	%eof           reduce using rule 27


State 32

	%start_declParser -> decl .                         (rule 1)

	%eof           accept


State 33

	assignDef -> exp . '=' frhs maybeWhere              (rule 10)
	decl -> exp . '::=' constructors                    (rule 26)
	infixApp -> exp . infixOp exp                       (rule 33)
	apply -> exp . term                                 (rule 34)

	'='            shift, and enter state 37
	'::='          shift, and enter state 38
	'('            shift, and enter state 16
	'['            shift, and enter state 17
	plus           shift, and enter state 18
	minus          shift, and enter state 19
	mult           shift, and enter state 20
	div            shift, and enter state 21
	equal          shift, and enter state 22
	lt             shift, and enter state 23
	gt             shift, and enter state 24
	':'            shift, and enter state 25
	infix_var      shift, and enter state 26
	const          shift, and enter state 27
	constr         shift, and enter state 28
	var            shift, and enter state 29
	gtype_2plus    shift, and enter state 30

	infixOp        goto state 35
	term           goto state 36
	variable       goto state 10
	constant       goto state 11
	genTypeVar     goto state 12
	specialLit     goto state 13
	listLit        goto state 14
	tupleLit       goto state 15

State 34

	%start_parser -> program .                          (rule 0)

	%eof           accept


State 35

	infixApp -> exp infixOp . exp                       (rule 33)
	term -> infixOp .                                   (rule 50)

	'='            reduce using rule 50
	'::='          reduce using rule 50
	'('            shift, and enter state 16
			(reduce using rule 50)

	')'            reduce using rule 50
	'['            shift, and enter state 17
			(reduce using rule 50)

	']'            reduce using rule 50
	';'            reduce using rule 50
	','            reduce using rule 50
	'}'            reduce using rule 50
	'|'            reduce using rule 50
	'where'        reduce using rule 50
	plus           shift, and enter state 18
			(reduce using rule 50)

	minus          shift, and enter state 19
			(reduce using rule 50)

	mult           shift, and enter state 20
			(reduce using rule 50)

	div            shift, and enter state 21
			(reduce using rule 50)

	equal          shift, and enter state 22
			(reduce using rule 50)

	lt             shift, and enter state 23
			(reduce using rule 50)

	gt             shift, and enter state 24
			(reduce using rule 50)

	':'            shift, and enter state 25
			(reduce using rule 50)

	infix_var      shift, and enter state 26
			(reduce using rule 50)

	const          shift, and enter state 27
			(reduce using rule 50)

	constr         shift, and enter state 28
			(reduce using rule 50)

	var            shift, and enter state 29
			(reduce using rule 50)

	gtype_2plus    shift, and enter state 30
			(reduce using rule 50)

	%eof           reduce using rule 50

	exp            goto state 62
	infixApp       goto state 6
	apply          goto state 7
	infixOp        goto state 8
	term           goto state 9
	variable       goto state 10
	constant       goto state 11
	genTypeVar     goto state 12
	specialLit     goto state 13
	listLit        goto state 14
	tupleLit       goto state 15

State 36

	apply -> exp term .                                 (rule 34)

	'='            reduce using rule 34
	'::='          reduce using rule 34
	'('            reduce using rule 34
	')'            reduce using rule 34
	'['            reduce using rule 34
	']'            reduce using rule 34
	';'            reduce using rule 34
	','            reduce using rule 34
	'}'            reduce using rule 34
	'|'            reduce using rule 34
	'where'        reduce using rule 34
	plus           reduce using rule 34
	minus          reduce using rule 34
	mult           reduce using rule 34
	div            reduce using rule 34
	equal          reduce using rule 34
	lt             reduce using rule 34
	gt             reduce using rule 34
	':'            reduce using rule 34
	infix_var      reduce using rule 34
	const          reduce using rule 34
	constr         reduce using rule 34
	var            reduce using rule 34
	gtype_2plus    reduce using rule 34
	%eof           reduce using rule 34


State 37

	assignDef -> exp '=' . frhs maybeWhere              (rule 10)

	'('            shift, and enter state 16
	'['            shift, and enter state 17
	plus           shift, and enter state 18
	minus          shift, and enter state 19
	mult           shift, and enter state 20
	div            shift, and enter state 21
	equal          shift, and enter state 22
	lt             shift, and enter state 23
	gt             shift, and enter state 24
	':'            shift, and enter state 25
	infix_var      shift, and enter state 26
	const          shift, and enter state 27
	constr         shift, and enter state 28
	var            shift, and enter state 29
	gtype_2plus    shift, and enter state 30
